--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> BMI Calculator </title>
+    <link rel="stylesheet" href="bmi.css">
+    <script src="bmi.js"></script>
 </head>
 <body>
-    this is the test project
+    <p> it cannot be displayed here</p>
+    <div class="logo">
+        <img src="bmi-Images/BMI_LOGO-removebg-preview.png">
+    </div>
+
+    <img src="bmi-Images/BMI_LOGO-removebg-preview (1).png" class="clouds one">
+    <img src="bmi-Images/BMI_LOGO-removebg-preview (1).png" class="clouds two">
+    <img src="bmi-Images/BMI_LOGO-removebg-preview (1).png" class="clouds three">
+    <img src="bmi-Images/BMI_LOGO-removebg-preview (1).png" class="clouds four">
+    <img src="bmi-Images/BMI_LOGO-removebg-preview (1).png" class="clouds five"> 
+    
+    <div class="container">
+        <h1> <span>B</span>ody <span>M</span>ass <span>I</span>ndex Calculator </h1>
+
+            <label for="height"> height:</label>
+            <input type="number" id="height" placeholder="Height (cm)">
+
+            <label for="weight"> weight:</label>
+            <input type="number" id="weight" placeholder="Weight (kg)">
+
+            <button onclick="calculateBMI()">Calculate</button>
+            <div id="output"></div>
+    </div>
 </body>
 </html>
